# CmakeWidgets

./: .gitignore  README.md
AddPrivateFont/: CMakeLists.txt  main.cpp  memo.txt
BimapAlpa/: CMakeLists.txt  DrawBitmapPanel.h  main.cpp  memo.txt
BimapAlpha/: CMakeSettings.json  DrawBitmapPanel.h  main.cpp  memo.txt
BitmapDepth/: CMakeLists.txt  CMakeSettings.json  main.cpp
CompareBorder/: CMakeLists.txt  CMakeSettings.json  main.cpp  memo.txt
Display/: CMakeLists.txt  main.cpp  panel.h
EventInPopup/: CMakeLists.txt  CMakeSettings.json  dialog.cpp  dialog.h  main.cpp  memo.txt  panel.cpp  panel.h  popup.cpp  popup.h
GCDraw/: CMakeLists.txt  main.cpp  panel.h
HellowWorld/: CMakeLists.txt  main.cpp
ListCtrl/: CMakeLists.txt  main.cpp  panel.h
OverrideEventHandler/: CMakeLists.txt  main.cpp  panel.h
ReadSVGFile/: CMakeLists.txt  ReadSVG.h  main.cpp
Sizing/: CMakeLists.txt  main.cpp  memo.txt
StaticBackColour/: CMakeLists.txt  main.cpp
TemplateMinimum/: CMakeSettings.json  main.cpp
TemplateWithButton/: CMakeLists.txt  TestPanel.cpp  TestPanel.h  main.cpp  myPanel.cpp  myPanel.h
TemplateWithButton/base/: myPanelBase.cpp  myPanelBase.h
TransparentImage/: CMakeLists.txt  main.cpp
TransparentPaint/: CMakeLists.txt  CMakeSettings.json  TransparentPaint.h  main.cpp  memo.txt
